form gaps fixed

--- a/Main Page/css/purchasedetail.css
+++ b/Main Page/css/purchasedetail.css
@@ -64,8 +64,9 @@
   .purchase-form {
     .inputs {
       margin-bottom: 15px;
-
+      
       input {
+        margin-top: 5px;
         width: 100%;
         padding: 0.5rem;
         border: 1px solid #c2c2c2;
