--- a/Main Page/css/signin.css
+++ b/Main Page/css/signin.css
@@ -31,6 +31,7 @@
           margin-bottom: 15px;
 
           input {
+            margin-top: 5px;
             width: 100%;
             padding: 0.5rem;
             border: 1px solid #c2c2c2;
